Fixed horizontal scrolling on results

--- a/css/challenge_style.css
+++ b/css/challenge_style.css
@@ -142,46 +142,11 @@ h2{
 }
 
 
-
 /* Extra small devices */
 
-	#modal-content{
-		width: 300px;
-		height: 440px;
-	}
-
-/* Small devices */
-@media (min-width: 768px) { 
-	
-	#modal-content{
-		width: 300px;
-		height: 440px;
-	}
-	
-
-}
-
-/* Medium devices*/
-@media (min-width: 992px) { 
-	
-		#modal-content{
-		width: 300px;
-		height: 440px;
-	}
-
-	
-
-}
-
-/* Large devices*/
-@media (min-width: 1200px) { 
-
-	#modal-content{
-		width: 300px;
-		height: 440px;
-	}
-	
-	
+#modal-content{
+	width: 300px;
+	height: 440px;
 }
 
 .challenge-buttons{
